# qsafevault

./: .gitignore  CRYPTO_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  README.md  SPEC.md  SRS.md  SYNC_GUIDE.md  USER_GUIDE.md  build_crypto.bat  build_crypto.sh  build_crypto_android.sh  build_crypto_ios.sh  pubspec.yaml
.github/workflows/: flutter_build.yml  manual_build.yml  rust_ffi_build.yml  server_tests.yml  sync_server_repo.yml
android/app/src/main/: AndroidManifest.xml
crypto_engine/: Cargo.toml  README.md  qsafevault_crypto.h
crypto_engine/src/: classical_kem.rs  edition.rs  ffi.rs  hybrid_kem.rs  key_provider.rs  lib.rs  pqc_kem.rs  pqc_signature.rs  sealed_storage.rs  security_tests.rs  slh_dsa.rs  softhsm.rs  symmetric.rs
crypto_engine/src/platform_keystore/: android_strongbox.rs  android_strongbox_impl.rs  fallback_software.rs  ios_secure_enclave.rs  linux_tpm.rs  linux_tpm_impl.rs  macos_secure_enclave.rs  mod.rs  softhsm_pkcs11.rs  softhsm_pkcs11_impl.rs  windows_tpm.rs  windows_tpm_impl.rs
docs/: CRYPTO_ARCHITECTURE.md  CRYPTO_ENGINE.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY_ARCHITECTURE.md  SOFTHSM_INSTALLATION.md  SYNC_GUIDE.md  TESTING_GUIDE.md
example/: crypto_usage_example.dart
extra-tools/: dart_call_map.dot  mapper.py
ios/: Podfile
ios/Frameworks/CryptoEngine.xcframework/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/config/: edition_config.dart  sync_config.dart
lib/ffi/: crypto_bindings.dart  rust_crypto_service.dart
lib/pages/: home_page.dart  landing_page.dart
lib/services/: api_endpoint_service.dart  crdt_service.dart  crypto_backend_notifier.dart  fips_crypto_service.dart  invite_code_utils.dart  p2p_peer_service.dart  relay_client.dart  storage_service.dart  sync_service.dart
lib/services/storage_helpers/: storage_constants.dart  storage_crypto_helpers.dart  storage_kdf_helpers.dart
lib/widgets/: sync_dialog.dart
macos/libs/: libcrypto_engine.dylib
qsafevault-server/: REVIEW.md  SERVER_SPEC.md  editionConfig.js  package-lock.json  package.json  server.js  sessionManager.js
qsafevault-server/api/: relay.js
qsafevault-server/api/v1/: edition.js
qsafevault-server/api/v1/devices/: index.js
qsafevault-server/api/v1/sessions/: sessionStore.js
qsafevault-server/api/v1/sessions/[sessionId]/: answer.js  offer.js
qsafevault-server/test/: comprehensive-test.js  live-server-test.js  relay-test.js
test/services/: crypto_backend_notifier_test.dart  relay_sync_integration_test.dart
test/widgets/: sync_dialog_ack_test.dart  sync_dialog_duplicate_prevention_test.dart
