[package]
name = "crypto_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]  # cdylib for dynamic libs, staticlib for iOS

[dependencies]
# Zeroization for secure memory handling
zeroize = { version = "1", features = ["zeroize_derive"] }

# AES-GCM authenticated encryption
aes-gcm = "0.10"
aead = { version = "0.5", features = ["alloc"] }

# HKDF key derivation with SHA3
hkdf = "0.12"
sha3 = "0.10"

# Argon2 password hashing
argon2 = "0.5"

# HMAC for message authentication
hmac = "0.12"

# X25519 key exchange
x25519-dalek = { version = "2", features = ["static_secrets"] }

# Post-quantum ML-KEM (Kyber) key encapsulation
pqcrypto-mlkem = "0.1"
pqcrypto-traits = "0.3"

# Random number generation
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }  # js feature for WASM support

# Libc for FFI types
libc = "0.2"

# PKCS#11 / SoftHSM2 support (only for desktop platforms)
[target.'cfg(not(any(target_os = "android", target_os = "ios", target_arch = "wasm32")))'.dependencies]
cryptoki = "0.7"
cryptoki-sys = "0.1"

[features]
default = []
wasm = []
softhsm = []  # Enable SoftHSM2 support

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
