[package]
name = "crypto_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]   # cdylib for dynamic libs, staticlib for iOS

[dependencies]
# Zeroization for secure memory cleanup
zeroize = { version = "1.7", features = ["derive"] }

# AES-GCM for symmetric encryption
aes-gcm = "0.10"
aead = { version = "0.5", features = ["std"] }

# HKDF with SHA3 for key derivation
hkdf = "0.12"
sha3 = "0.10"

# X25519 for classical ECDH
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["getrandom"] }

# FIPS 203: ML-KEM-1024 for post-quantum KEM
pqcrypto-mlkem = "0.1"
pqcrypto-traits = "0.3"

# FIPS 204: ML-DSA-65 for post-quantum digital signatures
pqcrypto-mldsa = "0.1"

# FIPS 205: SLH-DSA (SPHINCS+) for stateless hash-based signatures
pqcrypto-sphincsplus = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Utilities
dirs = "5.0"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
simple_logger = "4.3"

# Platform-specific secure storage dependencies
[target.'cfg(target_os = "ios")'.dependencies]
security-framework = "2.11"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.11"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
lazy_static = "1.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }

[target.'cfg(target_os = "linux")'.dependencies]
# TPM2 support via tss-esapi
tss-esapi = { version = "7.4", optional = true }

# PKCS#11 support for SoftHSM (all desktop platforms)
[target.'cfg(not(target_os = "android"))'.dependencies]
pkcs11 = "0.5"

[features]
default = []
tpm = ["tss-esapi"]

[dev-dependencies]
hex = "0.4"
